--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>VanillaDo</title>
+  <script src="vanillaDo.js"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>VanillaDo</h1>
   <button id="create">Create a To Do</button>
+  <div id="create-todo"></div>
   <div id="list"></div>
-  <script src="vanillaDo.js"></script>
 </body>
 </html>
